root-modules/educates-on-proxmox/examples/test-apps/app-test-gw-api-pvc-rwx-talos.yaml
# Deployment with InitContainer to seed the volume
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-rwx
spec:
  replicas: 3
  selector:
    matchLabels: {app: test-web-rwx}
  template:
    metadata:
      labels: {app: test-web-rwx}
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      # InitContainer copies the index.html from the ConfigMap into the PVC
      # Using 'alpine' as a neutral image to avoid permission issues
      containers:
      - name: nginx
        # Using unprivileged image to comply with restricted security standards
        image: nginxinc/nginx-unprivileged:alpine
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 101
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
        - name: config-vol
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: html-source
        configMap:
          name: web-content-rwx
      - name: data
        persistentVolumeClaim:
          claimName: test-pvc-rwx
      - name: config-vol
        configMap:
          name: nginx-config
---
# Service to expose the pod internally
apiVersion: v1
kind: Service
metadata:
  name: test-svc-rwx
spec:
  selector: {app: test-web-rwx}
  ports: [{port: 8080, targetPort: 8080}]
---
# ReferenceGrant: Allow Route to attach to Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-default-namespace-rwx
  namespace: kube-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
---
# ReferenceGrant: Allow Gateway to access Service
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-backend-svc-rwx
  namespace: default
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: kube-system
  to:
  - group: "" # Core group for Services
    kind: Service
    name: test-svc-rwx
---
# HTTPRoute to expose the service via Gateway API (TLS terminated at Gateway)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route-rwx
spec:
  parentRefs:
  - name: main-gateway
    namespace: kube-system
    # Specifies the sectionName corresponding to the 443/HTTPS listener
    sectionName: https 
  hostnames:
  - "test-api-gw-pvc-rwx.talos-app.axlab.inet"
  rules:
  - backendRefs:
    - name: test-svc-rwx
      # Gateway handles SSL, so traffic is passed to the pod on port 80
      port: 8080
